src/objects/Employer_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Employer Contacts</relationshipLabel>
        <relationshipName>Employer_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Position__c</fullName>
        <label>Contact Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_On__c</fullName>
        <label>Contacted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employer_Suburb__c</fullName>
        <label>Employer Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 to 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview/Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <label>Interview/Meeting Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Details__c</fullName>
        <label>Job Details</label>
        <picklist>
            <picklistValues>
                <fullName>9 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Seeker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Job_Seeker__c.Assigned_To__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Employer Contacts</relationshipLabel>
        <relationshipName>Employer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume drop off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No vacancy - Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume sent / apply online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not disturb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sensis_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sensis ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employer Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Number__c</columns>
        <columns>Contacted_On__c</columns>
        <columns>Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC{000000000}</displayFormat>
        <label>Employer Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employer Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Interview_Time</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Result__c, &apos;Interview&apos;) ||
ISPICKVAL(Result__c, &apos;Resume drop off&apos;)) &amp;&amp; (ISBLANK(Interview_Date__c) || ISPICKVAL(Interview_Time__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Interview date and time are required when Result is Interview.</errorMessage>
    </validationRules>
</CustomObject>